[tool.poetry]
name = "stock-images-mcp"
version = "1.0.0"
description = "MCP Server for searching and downloading stock images from multiple platforms"
authors = ["Zulelee"]
readme = "README.md"
packages = [{include = "server.py"}]

[tool.poetry.dependencies]
python = "^3.12"
mcp = "1.13.0"
requests = "2.32.4"
python-dotenv = "1.1.1"

[tool.poetry.scripts]
stock-images-mcp = "server:main"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
